--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.3.0"
+    "@astrojs/sitemap": "^3.2.1",
+    "@tailwindcss/vite": "^4.0.6",
+    "astro": "^5.3.0",
+    "astro-icon": "^1.1.5",
+    "tailwindcss": "^4.0.6"
+  },
+  "devDependencies": {
+    "@iconify-json/mdi": "^1.2.3"
   }
 }
