--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "astro": "^5.4.1",
     "astro-icon": "^1.1.5",
+    "astro-seo": "^0.8.4",
     "gsap": "^3.12.7",
     "tailwindcss": "^4.0.6"
   },
